fix : 테스트 코드 warning 제거, get(0) -> getFirst()